<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tuan</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- 团购 -->
    <string name="meishi_tv00">济南</string>
    <string name="meishi_tv01">美食</string>
    <string name="meishi_tv02">电影</string>
    <string name="meishi_tv03">酒店</string>
    <string name="meishi_tv04">KTV</string>
    <string name="meishi_tv05">代金券</string>
    <string name="meishi_tv06">景点门票</string>
    <string name="meishi_tv07">今日新单</string>
    <string name="meishi_tv08">全部分类</string>
    <string name="meishi_tv09">名店抢购</string>
    <string name="meishi_tv10">输入商家，分类或商圈</string>
    <string name="meishi_tv11">猜你喜欢</string>
    <!-- 商家 -->
    <string name="shangjia_tv00">全部商家</string>
    <string name="shangjia_tv01">优惠商家</string>
    <string name="shangjia_tv02">全部分类</string>
    <string name="shangjia_tv03">全城</string>
    <string name="shangjia_tv04">好评优先</string>
    <!-- 酒店 -->
    <string name="jiudian_tv00">全日房</string>
    <string name="jiudian_tv01">钟点房</string>
    <string name="jiudian_tv02">济南</string>
    <string name="jiudian_tv03">全城</string>
    <!-- 我的 -->
    <string name="wode_tv00">我的</string>
    <string name="wode_tv01">美团券</string>
    <string name="wode_tv02">我的收藏</string>
    <string name="wode_tv03">团购订单</string>
    <string name="wode_tv04">每日推荐</string>
    <string name="wode_tv05">亲！您还没登录了呢？</string>
    <string name="wode_tv06">登录</string>
    <!-- 设置 -->
    <string name="gengdu_tv00">设置</string>
    <string name="gengdu_tv01">只有wifi下开启联网</string>
    <string name="gengdu_tv02">其他</string>
    <string name="gengdu_tv03">检查更新</string>
    <string name="gengdu_tv04">关于</string>
    <string name="gengdu_tv05">亲！您还没登录了呢？</string>
    <string name="gengdu_tv06">登录</string>
    <!-- 提示 -->
    <string name="tishi_connection">成功啦！</string>
    <string name="tishi_noconnection">亲！没联网呀！</string>
    <!-- 其他 -->
    <string name="tv00">当前城市:</string>
    <string name="tv01">切换</string>
    <string name="tv02">购物</string>
    <string name="tv03">智能排序</string>
    <string name="tv04">商家</string>

</resources>