<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cd"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:background="@drawable/ump_btn_payagain_normal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launch" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/quanbushangjia"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.73"
                android:gravity="center"
                android:textColor="@color/white"
                 android:textSize="18sp"
                android:text="@string/shangjia_tv00" />

            <ImageView
                android:id="@+id/quanbushang"
                android:layout_width="match_parent"
                android:layout_height="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/cd"
           android:layout_margin="5dp"
             />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/youhuishangjia"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.73"
                android:gravity="center"
                android:textSize="18sp"
                 android:textColor="@color/white"
                android:text="@string/shangjia_tv01" />

            <ImageView
                android:id="@+id/youhuishang"
                android:layout_width="match_parent"
                android:layout_height="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.17"
            android:orientation="vertical" >
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_map" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.30"
            android:src="@drawable/ic_search" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:drawableRight="@drawable/ic_bind_phone_num_step_bg"
            android:text="@string/shangjia_tv02" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
              android:gravity="center"
              android:textColor="@color/black"
               android:drawableRight="@drawable/ic_bind_phone_num_step_bg"
            android:text="@string/shangjia_tv03" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
              android:gravity="center"
              android:textColor="@color/black"
            android:text="@string/shangjia_tv04" />
    </LinearLayout>


<android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="#000000"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />
</LinearLayout>