<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cd"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/ump_btn_payagain_normal"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launch" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/wode_tv00"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.85" >
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launch" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginLeft="5dp"
          android:textColor="@color/black"
          android:textSize="18sp"
        android:layout_marginRight="5dp"
        android:gravity="center_vertical"
        android:text="@string/gengdu_tv00" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/ump_btn_payagain_normal"
        android:orientation="vertical" >
    </LinearLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
          android:textColor="@color/black"
        android:layout_marginRight="5dp"
        android:layout_weight="0.00"
        android:gravity="center_vertical"
        android:text="@string/gengdu_tv01" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/cd2"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
          android:textColor="@color/black"
        android:layout_marginRight="5dp"
        android:gravity="center_vertical"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
       android:background="@color/cd2"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
          android:textColor="@color/black"
        android:gravity="center_vertical"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
       android:background="@color/cd2"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
          android:textColor="@color/black"
        android:gravity="center_vertical"
        android:text="@string/gengdu_tv02" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/ump_btn_payagain_normal"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
          android:textColor="@color/black"
        android:gravity="center_vertical"
        android:text="@string/gengdu_tv03" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
       android:background="@color/cd2"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
          android:textColor="@color/black"
        android:gravity="center_vertical"
        android:text="@string/gengdu_tv04" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/cd2"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
       android:background="@color/cd2"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>